[gd_scene load_steps=5 format=3 uid="uid://b8upd5s60o0j6"]

[ext_resource type="Script" uid="uid://cxltchabywlpj" path="res://scenes/game.gd" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://8v4qgb0qyjo0" path="res://scenes/card_manager.gd" id="2_lnu2h"]
[ext_resource type="Script" uid="uid://dq1ffuvjirpbu" path="res://scenes/hand_container.gd" id="2_yqjtg"]
[ext_resource type="Script" uid="uid://dgo3xywqbxe0q" path="res://scenes/round_manager.gd" id="3_lbhrr"]

[node name="Game" type="Node2D"]
script = ExtResource("1_uwrxv")

[node name="CardManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_lnu2h")

[node name="RoundManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_lbhrr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StageLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="RoundLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Round: 1"

[node name="GoalLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Goal: 10"

[node name="PointsLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 250
text = "0"

[node name="HandContainer" type="Container" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("2_yqjtg")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="DiscardLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Deck:"

[node name="PlayButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Play"

[node name="DeckLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Deck:"

[connection signal="end_game" from="RoundManager" to="." method="_on_round_manager_end_game"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/PlayButton" to="RoundManager" method="_on_play_button_pressed"]
